--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - Gái xinh Việt Nam</title>
+    <title>FG Admin</title>
     <link rel="icon" type="image/x-icon" href="tabLogo.jpg">
     <link rel="stylesheet" href="gallery-styles.css">
     <!-- Firebase SDK v8 (for compatibility with static HTML) -->
@@ -274,7 +274,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Admin Panel - Gái xinh Việt Nam</h1>
+        <h1>Admin Panel</h1>
         <button class="logout-btn" onclick="logout()">Đăng xuất</button>
     </div>
 
