--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gái xinh Việt Nam</title>
+    <title>FG Community</title>
     <link rel="icon" type="image/x-icon" href="tabLogo.jpg">
     <link rel="stylesheet" href="gallery-styles.css">
     <!-- Firebase SDK v8 (for compatibility with static HTML) -->
@@ -308,8 +308,8 @@
         <div style="position: absolute; bottom: 20%; left: 20%; width: 100px; height: 100px; background: radial-gradient(circle, rgba(220,20,60,0.06) 0%, transparent 70%); border-radius: 50%; animation: float 7s ease-in-out infinite;"></div>
         <div style="display: flex; align-items: center; justify-content: center; margin: 0; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background: linear-gradient(135deg, #121212 0%, #1a1a1a 50%, #0a0a0a 100%); padding: 5px 0; backdrop-filter: blur(10px); border-radius: 0 0 15px 15px; box-shadow: 0 0 20px rgba(255, 105, 180, 0.3), 0 0 40px rgba(255, 20, 147, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1); animation: borderGlow 3s ease-in-out infinite;">
 
-            <img src="logo.jpg" alt="Gái xinh Việt Nam Logo" style="max-width: 80px; height: auto; margin-right: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.3); position: relative; z-index: 2;">
-            <h1 style="color: #ffffff; margin: 10px 0; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.5em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite, glow 2s ease-in-out infinite alternate; position: relative; z-index: 2;">Gái xinh Việt Nam</h1>
+            <img src="logo.jpg" alt="FG Logo" style="max-width: 80px; height: auto; margin-right: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.3); position: relative; z-index: 2;">
+            <h1 style="color: #ffffff; margin: 10px 0; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.5em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite, glow 2s ease-in-out infinite alternate; position: relative; z-index: 2;">Fresh Girl</h1>
             <button id="loginBtn" style="background: linear-gradient(45deg, #ff69b4, #ff1493); color: white; border: none; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-weight: bold; margin-left: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">Đăng nhập</button>
 
             <!-- Enhanced Sparkle effects -->
@@ -409,12 +409,27 @@
                     const titleData = titleDoc.data();
                     const titleName = titleData.name;
 
-                    // Get image count for this title (new structure)
+                    // Get media count for this title (new structure)
                     const imagesSnapshot = await db.collection('images')
                         .where('titleId', '==', titleDoc.id)
                         .get();
 
-                    const imageCount = imagesSnapshot.size;
+                    // Count images and videos separately
+                    let imageCount = 0;
+                    let videoCount = 0;
+
+                    imagesSnapshot.docs.forEach((doc) => {
+                        const imageData = doc.data();
+                        if (imageData.type === 'video' ||
+                           (imageData.url && imageData.url.match(/\.(mp4|avi|mov|wmv|flv|webm|mkv)$/i)) ||
+                           (imageData.fileName && imageData.fileName.match(/\.(mp4|avi|mov|wmv|flv|webm|mkv)$/i))) {
+                            videoCount++;
+                        } else {
+                            imageCount++;
+                        }
+                    });
+
+                    const totalCount = imagesSnapshot.size;
 
                     // Get cover image for this album
                     let coverImageUrl = null;
@@ -434,7 +449,7 @@
                         console.warn('Error loading cover image for album:', titleName, error);
                     }
 
-                    return { titleName, imageCount, coverImageUrl };
+                    return { titleName, imageCount, videoCount, totalCount, coverImageUrl };
                 });
 
                 // Wait for all titles to be processed
@@ -443,7 +458,7 @@
                 // Clear loading and display all titles at once
                 titlesContainer.innerHTML = '';
 
-                for (const { titleName, imageCount, coverImageUrl } of titleDataArray) {
+                for (const { titleName, imageCount, videoCount, totalCount, coverImageUrl } of titleDataArray) {
                     // Create title card
                     const titleCard = document.createElement('a');
                     titleCard.href = `view.html?title=${encodeURIComponent(titleName)}`;
@@ -461,7 +476,17 @@
                     titleElement.textContent = titleName;
 
                     const countElement = document.createElement('p');
-                    countElement.textContent = `${imageCount} image${imageCount !== 1 ? 's' : ''}`;
+                    let countText = '';
+                    if (imageCount > 0 && videoCount > 0) {
+                        countText = `${imageCount} ảnh, ${videoCount} video`;
+                    } else if (imageCount > 0) {
+                        countText = `${imageCount} ảnh`;
+                    } else if (videoCount > 0) {
+                        countText = `${videoCount} video`;
+                    } else {
+                        countText = '0 files';
+                    }
+                    countElement.textContent = countText;
 
                     titleCard.appendChild(titleElement);
                     titleCard.appendChild(countElement);
